WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203366
REGRESSION: [ iOS ] (
r251015
) Layout Test fast/text/whitespace/pre-wrap-overflow-selection.html is flaky
https://bugs.webkit.org/show_bug.cgi?id=203366
Summary
REGRESSION: [ iOS ] ( r251015 ) Layout Test fast/text/whitespace/pre-wrap-ove...
Truitt Savell
Reported
2019-10-24 08:45:57 PDT
The following layout test is flaky on iOS fast/text/whitespace/pre-wrap-overflow-selection.html Probable cause: This was caused by
r251015
. It is easily reproducible by just running the test in iterations. Flakiness Dashboard:
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=fast%2Ftext%2Fwhitespace%2Fpre-wrap-overflow-selection.html
Diff: --- /Volumes/Data/slave/ios-simulator-13-release-tests-wk2/build/layout-test-results/fast/text/whitespace/pre-wrap-overflow-selection-expected.txt +++ /Volumes/Data/slave/ios-simulator-13-release-tests-wk2/build/layout-test-results/fast/text/whitespace/pre-wrap-overflow-selection-actual.txt @@ -22,12 +22,10 @@ RenderBlock {HR} at (0,198) size 784x2 [border: (1px inset #000000)] RenderBlock {PRE} at (0,213) size 108x78 [border: (4px solid #0000FF)] RenderText {#text} at (4,4) size 100x70 - text run at (4,4) width 86: "This text" - text run at (89,4) width 15: " " + text run at (4,4) width 100: "This text " text run at (4,18) width 71: "will wrap" text run at (74,18) width 1: " " - text run at (4,32) width 71: "and fit" - text run at (74,32) width 24: " " + text run at (4,32) width 94: "and fit " text run at (4,46) width 79: "within the" text run at (82,46) width 1: " " text run at (4,60) width 32: "box."
Attachments
patch
(2.76 KB, patch)
2019-11-05 13:53 PST
,
Antti Koivisto
zalan
: review+
Details
Formatted Diff
Diff
patch that fixes the underlying flakiness
(4.71 KB, patch)
2019-11-06 11:05 PST
,
Antti Koivisto
simon.fraser
: review+
Details
Formatted Diff
Diff
patch
(6.36 KB, patch)
2019-11-06 16:13 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-cq-01 for mac-highsierra
(3.63 MB, application/zip)
2019-11-06 18:25 PST
,
WebKit Commit Bot
no flags
Details
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-10-24 08:48:00 PDT
<
rdar://problem/56580680
>
Truitt Savell
Comment 2
2019-10-24 08:48:02 PDT
***
Bug 203363
has been marked as a duplicate of this bug. ***
Truitt Savell
Comment 3
2019-10-24 08:53:53 PDT
marked this as a failure in
https://trac.webkit.org/changeset/251538/webkit
while it is investigated and to avoid slowing down iOS EWS.
Antti Koivisto
Comment 4
2019-11-05 13:53:50 PST
Created
attachment 382844
[details]
patch
Antti Koivisto
Comment 5
2019-11-06 11:05:45 PST
Created
attachment 382941
[details]
patch that fixes the underlying flakiness
Simon Fraser (smfr)
Comment 6
2019-11-06 16:03:48 PST
Comment on
attachment 382941
[details]
patch that fixes the underlying flakiness View in context:
https://bugs.webkit.org/attachment.cgi?id=382941&action=review
> Source/WebKit/ChangeLog:13 > + In this case the randomess is switch between simple and complex line layout triggered by editor state flush. The results
"randomess is switch"
> Source/WebKit/ChangeLog:14 > + between line layout paths are obsevably identical but produce slightly different render tree dumps.
"obsevably"
> Source/WebKit/WebProcess/InjectedBundle/API/c/WKBundlePage.cpp:518 > + WebKit::toImpl(page)->flushPendingEditorStateUpdate();
Seems like this is something that we should to at "update the rendering" time? (In a later fix).
Antti Koivisto
Comment 7
2019-11-06 16:13:02 PST
Created
attachment 382976
[details]
patch
WebKit Commit Bot
Comment 8
2019-11-06 18:25:26 PST
Comment on
attachment 382976
[details]
patch Rejecting
attachment 382976
[details]
from commit-queue. New failing tests: webgl/1.0.3/conformance/extensions/webgl-draw-buffers.html Full output:
https://webkit-queues.webkit.org/results/13220879
WebKit Commit Bot
Comment 9
2019-11-06 18:25:28 PST
Created
attachment 383000
[details]
Archive of layout-test-results from webkit-cq-01 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the commit-queue. Bot: webkit-cq-01 Port: mac-highsierra Platform: Mac OS X 10.13.6
WebKit Commit Bot
Comment 10
2019-11-06 20:04:12 PST
The commit-queue encountered the following flaky tests while processing
attachment 382976
[details]
: imported/w3c/web-platform-tests/websockets/bufferedAmount-unchanged-by-sync-xhr.any.worker.html
bug 202003
(author:
youennf@gmail.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 11
2019-11-06 20:05:08 PST
Comment on
attachment 382976
[details]
patch Clearing flags on attachment: 382976 Committed
r252172
: <
https://trac.webkit.org/changeset/252172
>
WebKit Commit Bot
Comment 12
2019-11-06 20:05:10 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug